--- a/mean/package.json
+++ b/mean/package.json
@@ -13,6 +13,7 @@
     "ejs-locals": "^1.0.2",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "moment": "^2.17.1",
     "mongojs": "^2.4.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
